# gcp_core_service

./: .env.example  .gitignore  README.md  pyproject.toml
app/: main.py
app/conf/: config.py
app/contrib/school/: api.py  models.py  repository.py  schema.py
app/contrib/user/: api.py  models.py  repository.py  schema.py
app/core/: enums.py  exceptions.py  handlers.py  schema.py
app/db/: models.py  repository.py  session.py
app/routers/: api.py  dependency.py  urls.py
app/utils/: __init__.py  security.py
test/: conftest.py
test/api/: test_account.py  test_school.py  test_user.py
